Fixed responsiveness on mobile

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ article.app img {
 
 .app {
     float: left;
-    width: 100%;
+    width: 46%;
     margin: 5px;
 }
 
